infra/k8s/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qoomlee-team-00-prod
  labels:
    team: team-00
    env: prod
